gcp/gke/deploy/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.allow-http: "true"
    kubernetes.io/ingress.global-static-ip-name: "api-server-static-ip"
  labels:
    run: api-server
spec:
  rules:
    - http:
        paths:
#          - path: /*
#            backend:
#              serviceName: "static-server-backend"
#              servicePort: 80
          - path: /*
            backend:
              serviceName: "api-server-backend"
              servicePort: 8080
